# xt

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  about.hbs  about.toml  clippy.toml  rustfmt.toml  xt.1
.github/workflows/: build-release-archives.yml  deep-tests.yml  main-tests.yml  release-process.yml  xt-full-test-matrix.yml  xt-main-tests.yml  xt-release.yml  xt-test-windows.yml
benches/: README.md  criterion.rs  github-events.README.txt  github-events.msgpack.zst  github_events.rs  k8s-job.json  k8s-job.msgpack  k8s-job.msgpack.zst  k8s_job.rs
doc/: RELEASE-README.txt  xt.1
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reader_detected_all_formats.rs  slice_detected_all_formats.rs
src/: bail.rs  detect.rs  error.rs  input.rs  input2.rs  json.rs  jyt.rs  lib.rs  main.rs  msgpack.rs  pipecheck.rs  toml.rs  transcode.rs  yaml.rs
src/jyt/: msgpack.rs
src/transcode/: stream.rs  value.rs
src/yaml/: chonkster.rs  chunker.rs  encoding.rs  parser.rs
src/yaml/chunker/: parser.rs
tests/: initial_table.toml  integration_tests.rs  multi.json  multi.msgpack  multi.yaml  nullkey.yaml  single.json  single.msgpack  single.toml  single.yaml  single_reordered.json  utf16be.yaml  utf16bebom.yaml  utf16le.yaml  utf32be.yaml  utf32le.yaml  utf32lebom.yaml  utf8bom.yaml
