[package]
name = "xt"
version = "0.17.2-dev"
description = "Translate between serialized data formats"
repository = "https://github.com/ahamlinman/xt"
authors = ["Alex Hamlin <alex@alexhamlin.co>"]
license = "MIT"
edition = "2021"
rust-version = "1.61.0"
categories = ["command-line-utilities"]
keywords = ["cli"]
exclude = ["benches/**"]

[dependencies]
is-terminal = "0.4.5"
lexopt = "0.3.0"
memmap2 = "0.5.10"
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = "1.0.158"
serde_json = "1.0.94"
serde_yaml = "0.9.19"
unsafe-libyaml = "0.2.7"

[dependencies.toml]
version = "0.7.3"
features = ["preserve_order"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.140"

[dev-dependencies]
hex-literal = "0.3.4"
similar-asserts = "1.4.2"
zstd = "0.12.3"

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.rstest]
version = "0.17.0"
default-features = false

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
