[package]
name = "xt"
version = "0.19.3-dev"
description = "Translate between serialized data formats"
repository = "https://github.com/ahamlinman/xt"
authors = ["Alex Hamlin <alex@alexhamlin.co>"]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"
categories = ["command-line-utilities"]
keywords = ["cli"]
exclude = ["benches/**"]

[dependencies]
lexopt = "0.3.0"
memmap2 = "0.9.4"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = "1.0.196"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
unsafe-libyaml = "0.2.11"

[dependencies.toml]
version = "0.8.20"
features = ["preserve_order"]

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

[dev-dependencies]
hex-literal = "0.4.1"
similar-asserts = "1.6.1"

[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports"]

[dev-dependencies.rstest]
version = "0.24.0"
default-features = false

[[bench]]
name = "criterion"
path = "benches/criterion.rs"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# The "release-opt" profile may allow the compiler to identify additional size
# and/or performance optimizations compared to the standard release profile, at
# the cost of greater compilation time and CPU consumption. You are encouraged
# to analyze and consider these tradeoffs in the context of your unique
# environment and use of xt.
[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
