[package]
name = "xt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.xt]
path = ".."

[[bin]]
name = "slice_detected_all_formats"
path = "fuzz_targets/slice_detected_all_formats.rs"
test = false
doc = false
bench = false
